# tiago-companion

./: LICENSE  README.md
action_tools_llm/: CMakeLists.txt  package.xml
action_tools_llm/action/: ObjectManipulation.action
action_tools_llm/config/: initialize_demo_config.yaml
action_tools_llm/msg/: ArucoObject.msg  ArucoObjectArray.msg
action_tools_llm/scripts/: test_action_tools_llm.py
action_tools_llm/src/: object_manipulation_server.cpp
companion_msgs/: CMakeLists.txt  package.xml
companion_msgs/msg/: BoundingBoxesLabels.msg  CropsWithIDs.msg  GlassesData.msg  SuperquadricMultiArray.msg  TaskNavigationGoal.msg
companion_msgs/srv/: ActivateSupercuadricsComputation.srv  ComputeGraspPoses.srv  GetBboxes.srv  GetSuperquadrics.srv  ObjectDetection.srv
companion_objects/: CMakeLists.txt  package.xml
companion_objects/launch/: companion_world_gazebo.launch
companion_objects/models/apple_juice_box/: apple_juice_box.dae  model.config  model.sdf
companion_objects/models/apricot_jam/: model.config  model.sdf
companion_objects/models/biscuits/: model.config  model.sdf
companion_objects/models/butter/: model.config  model.sdf
companion_objects/models/can_sprite/: model.sdf
companion_objects/models/cereal1/: model.config  model.sdf
companion_objects/models/cereal2/: model.sdf
companion_objects/models/cereal2/meshes/: cereal2.dae
companion_objects/models/cereal3/: model.config  model.sdf
companion_objects/models/cocacola_can/: model.config  model.sdf
companion_objects/models/kitchen/: model.config
companion_objects/models/milk1/: model.sdf
companion_objects/models/milk1/meshes/: milk.dae  milk1.dae
companion_objects/models/milk2/: model.config
companion_objects/models/milk2/meshes/: milk2.dae
companion_objects/models/nesquik/: model.config  model.sdf
companion_objects/models/nesquik/meshes/: nesquik.dae
companion_objects/models/nutella/: model.config  model.sdf
companion_objects/models/pringles_green/: model.config  model.sdf
companion_objects/models/pringles_red/: model.config  model.sdf
companion_objects/models/strawberry_jam/: model.config  model.sdf
companion_objects/models/table1/: model.sdf
companion_objects/models/tableEdited/: model.config
companion_objects/models/tea_box/: model.sdf
companion_objects/models/tomato_sauce/: model.config  model.sdf
companion_objects/models/tomato_sauce/meshes/: tomato_sauce.dae
companion_objects/worlds/: demo_proactive_assistance.world  test_for_presentation.world
demo_anticipatory_vs_reactive/: CMakeLists.txt  package.xml
demo_anticipatory_vs_reactive/config/: basic_demo_asr.yaml  comms_glasses.yaml  demo.yaml  demo_cereals_milk.yaml  wt_tiago_companion.yaml
demo_anticipatory_vs_reactive/csv/: Fri_Feb_24_10:15:14_2023.csv  Fri_Feb_24_10:16:02_2023.csv  Fri_Feb_24_10:17:42_2023.csv  Fri_Feb_24_10:25:20_2023.csv  Fri_Feb_24_10:27:28_2023.csv  Fri_Feb_24_10:29:43_2023.csv  Fri_Feb_24_11:21:49_2023.csv  Fri_Feb_24_11:27:11_2023.csv  Fri_Feb_24_11:32:11_2023.csv  Fri_Feb_24_11:37:56_2023.csv  Fri_Feb_24_11:44:33_2023.csv  Fri_Feb_24_11:51:50_2023.csv  Fri_Feb_24_11:57:42_2023.csv  Fri_Feb_24_12:06:22_2023.csv  Fri_Feb_24_12:14:32_2023.csv  Fri_Feb_24_12:26:21_2023.csv  Fri_Feb_24_12:30:02_2023.csv  Fri_Feb_24_12:41:27_2023.csv  Fri_Feb_24_12:42:51_2023.csv  Fri_Feb_24_12:47:54_2023.csv  Fri_Feb_24_12:55:54_2023.csv  Fri_Feb_24_13:02:30_2023.csv  Fri_Feb_24_13:05:52_2023.csv  Fri_Mar__3_14:15:54_2023.csv  Mon_Feb_27_10:20:31_2023.csv  Mon_Feb_27_10:29:55_2023.csv  Mon_Feb_27_10:32:23_2023.csv  Mon_Feb_27_10:36:00_2023.csv  Mon_Feb_27_10:36:52_2023.csv  Mon_Feb_27_10:37:58_2023.csv  Mon_Feb_27_10:39:52_2023.csv  Mon_Feb_27_10:42:30_2023.csv  Mon_Feb_27_10:44:19_2023.csv  Mon_Feb_27_10:50:43_2023.csv  Mon_Feb_27_11:34:30_2023.csv  Mon_Feb_27_11:37:12_2023.csv  Thu_Feb_23_16:11:07_2023.csv  Thu_Feb_23_16:13:40_2023.csv  Thu_Feb_23_16:19:38_2023.csv
demo_anticipatory_vs_reactive/launch/: basic_demo_asr.launch  demo.launch  demo_cereals_milk.launch  demo_simulation.launch  record_rosbag_demo.launch  test.launch
demo_anticipatory_vs_reactive/scripts/: .~lock.sharon_experiments_results.xlsx#  .~lock.table_sharon_experiments.xlsx#  OrganizacionExperimentosSHARON.xlsx  add_depth_filter.py  asr_node.py  categories.npy  comms_glasses_server.py  create_crops_from_bboxes.py  create_excel_combinations_occlusions.py  create_excel_table_from_experiments.py  detect_hit_ft.py  fake_glasses.py  from_bag_to_pngs.py  get_images_combinations_occlsions.py  get_superquadrics_and_bbox.py  incorrect_tests.py  plotSuperquadrics.py  send_asr_same_glasses.py  sharon_experiments_results.xlsx  table.xlsx  table_experimentos.xlsx  table_incorrect.xlsx  table_incorrect_different_arms.ods  table_sharon_experiments.xlsx
demo_anticipatory_vs_reactive/src/: basic_demo_asr.cpp  basic_demo_asr_node.cpp  demo_anticipatory_vs_reactive.cpp  demo_anticipatory_vs_reactive_node.cpp  demo_cereals_milk.cpp  (+1 more)
demo_sharon/: CMakeLists.txt  package.xml
demo_sharon/config/: comms_glasses.yaml  demo.yaml
demo_sharon/csv/: Tue_Jan_31_11:41:44_2023.csv
demo_sharon/include/demo_sharon/: demo_sharon.hpp
demo_sharon/launch/: demo_sharon.launch  demo_sharon_simulation.launch
demo_sharon/scripts/: add_depth_filter.py  asr_node.py  comms_glasses_server.py  fake_comms_glasses_client.py  fake_glasses.py
demo_sharon/src/: demo_sharon.cpp  demo_sharon_node.cpp
grasp_objects/: CMakeLists.txt  package.xml
grasp_objects/config/: grasp_objects.yaml
grasp_objects/include/grasp_objects/: constrained_superquadrics.hpp  grasp_objects.hpp
grasp_objects/launch/: grasp_objects.launch  grasp_objects_simulation.launch  rgbd_camera_to_pointcloud.launch
grasp_objects/scripts/: store_ros_pointcloud.py
grasp_objects/src/: constrained_superquadrics.cpp  constrained_superquadrics_node.cpp  grasp_objects.cpp  grasp_objects_node.cpp
proactive_assistance/: CMakeLists.txt  package.xml
sharon_msgs/: CMakeLists.txt  package.xml
sharon_objects/: CMakeLists.txt  package.xml
(+62 files in other folders)
