<?xml version="1.0"?>
<package format="2">
  <name>grasp_objects</name>
  <version>0.0.0</version>
  <description>The grasp_objects package</description>


  <maintainer email="emenende@pa.uc3m.es">Elisabeth Menendez</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>companion_msgs</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>companion_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>companion_msgs</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_geometry</exec_depend>



  <export>

  </export>
</package>
